# paper-world

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  level_editor.py  main.cpp  test.cpp
data/maps/: 0.json  1.json  10.json  11.json  15.json  2.json  3.json  4.json  8.json  default.json  other_3.json  other_4.json
src/: anim.cpp  anim.hpp  audio.hpp  buttons.hpp  clouds.hpp  coin.cpp  coin.hpp  constants.hpp  entities.cpp  entities.hpp  game.hpp  health_bars.cpp  health_bars.hpp  leaf.hpp  main.cpp  particles.cpp  particles.hpp  player.cpp  player.hpp  polygons.hpp  popups.hpp  shockwaves.hpp  sparks.cpp  sparks.hpp  stars.hpp  sword.cpp  sword.hpp  texman.hpp  texture.hpp  tiles.hpp  timer.cpp  timer.hpp  util.hpp  vec2.hpp  water.cpp  water.hpp  weapons.cpp  weapons.hpp  window.hpp
